--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
+armory==0.1.2
+defusedxml==0.4.1
 Django==1.10
+django-allauth==0.27.0
+django-crispy-forms==1.6.0
+oauthlib==1.1.2
+python3-openid==3.0.10
+requests==2.11.1
+requests-oauthlib==0.6.2
