--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ django-crispy-forms==1.6.0
 django-jinja==2.2.1
 django-redis==4.4.4
 hiredis==0.2.0
-jinja2==2.8
+Jinja2==2.8
 oauthlib==1.1.2
 psycopg2==2.6.2
 python3-openid==3.0.10
